--- a/plugin.xml
+++ b/plugin.xml
@@ -21,7 +21,7 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="YankeyPlugin">
-                <param name="android-package" value="com.yourange.cordova.plugin.YankeyPlugin"/>
+                <param name="android-package" value="com.yourange.yank.testplugin.YankeyPlugin"/>
             </feature>
         </config-file>
 
